--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -2,5 +2,63 @@
 
 /* ============ VARIABLES CSS ============ */
 :root {
+	--header-height: 3rem;
+  
+	/* ============ Colors ============ */
+	/* Change favorite color to match images */
+	/* Green dark 190 - Green 171 - Green Blue 200 */
+	--hue-color: 190;
+  
+	/* HSL color mode */
+	--first-color: hsl(238, 52%, 38%);
+	--second-color: #74a9f0;
+	--first-color-alt: #090a29;
+	--light-color: #f6faff;
+
+	// --first-color: hsl(var(--hue-color), 64%, 22%);
+	--first-color-second: hsl(var(--hue-color), 64%, 22%);
+	// --first-color-alt: hsl(var(--hue-color), 64%, 15%);
+	--title-color: hsl(var(--hue-color), 64%, 18%);
+	--text-color: hsl(var(--hue-color), 24%, 35%);
+	--text-color-light: hsl(var(--hue-color), 8%, 60%);
+	--input-color: hsl(var(--hue-color), 24%, 97%);
+	--body-color: hsl(var(--hue-color), 100%, 99%);
+	--white-color: #fff;
+	--scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
+	--scroll-thumb-color: hsl(var(--hue-color), 12%, 75%);
+  
+	/* ============ Font and typography ============ */
 	--body-font: "Zona Pro", sans-serif;
+	--title-font: "Raleway", sans-serif;
+	--biggest-font-size: 2.5rem;
+	--h1-font-size: 1.5rem;
+	--h2-font-size: 1.25rem;
+	--h3-font-size: 1rem;
+	--normal-font-size: 0.938rem;
+	--small-font-size: 0.813rem;
+	--smaller-font-size: 0.75rem;
+  
+	/* ============ Font weight ============ */
+	--font-medium: 500;
+	--font-semi-bold: 600;
+	--font-thin: 200;
+  
+	/* ============ Margenes Bottom ============ */
+	--mb-0-25: 0.25rem;
+	--mb-0-5: 0.5rem;
+	--mb-0-75: 0.75rem;
+	--mb-1: 1rem;
+	--mb-1-25: 1.25rem;
+	--mb-1-5: 1.5rem;
+	--mb-2: 2rem;
+	--mb-2-5: 2.5rem;
+  
+	/* ============ z index ============ */
+	--z-tooltip: 10;
+	--z-fixed: 100;
+  
+	/* ============ Hover overlay ============ */
+	--img-transition: 0.3s;
+	--img-hidden: hidden;
+	--img-scale: scale(1.1);
   }
