完善用户管理 新增检查管理

--- a/src/features/admin/style.less
+++ b/src/features/admin/style.less
@@ -2,6 +2,8 @@
 @import './Layout';
 @import './SidePanel';
 @import './UserMngPage';
-@import './UserModal';
+@import './ModalContainer';
 @import './UserDetailForm';
-@import './UserModalWrapper';
+@import './ModalWrapper';
+@import './ExamenMngPage';
+@import './ExamenDetailForm';
