--- a/src/features/admin/ExamenMngPage.less
+++ b/src/features/admin/ExamenMngPage.less
@@ -1,6 +1,6 @@
 @import '../../styles/mixins';
 
-.admin-user-mng-page {
+.admin-examen-mng-page {
   &-header {
     margin-bottom: 1.5rem;
     font-weight: var(--font-medium);
@@ -10,7 +10,8 @@
     button {
       height: 40px;
       border-radius: 10px;
-      font-size: 13px;
+	  font-size: 13px;
+	  
     }
   }
 
@@ -26,16 +27,8 @@
     box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 
     &-left {
-      .role-selector {
-        width: 200px;
-        .ant-select-selector {
-          border-radius: 9px;
-        }
-      }
-
       .search-bar {
-        margin-left: var(--mb-0-25);
-        width: 300px;
+        width: 400px;
 
         .ant-input {
           border-radius: 10px 0 0 10px;
@@ -49,13 +42,14 @@
 
   .ant-table {
     box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
-    &-thead {
-      font-size: 12px;
-    }
+  }
 
-    &-tbody {
-      font-size: 13px;
-    }
+  .ant-table-thead {
+    font-size: 12px;
+  }
+
+  .ant-table-tbody {
+    font-size: 13px;
   }
 
   &-footer {
@@ -63,5 +57,6 @@
     bottom: 30px;
     font-size: 12px;
     color: #7f7d87;
+
   }
 }
