--- a/src/features/admin/style.less
+++ b/src/features/admin/style.less
@@ -7,3 +7,5 @@
 @import './ModalWrapper';
 @import './ExamenMngPage';
 @import './ExamenDetailForm';
+@import './DptMngPage';
+@import './DptDetailForm';
