--- a/src/features/admin/SidePanel.less
+++ b/src/features/admin/SidePanel.less
@@ -4,12 +4,14 @@
   height: 100%;
   width: fit-content;
   overflow: scroll;
-  width: 250px;
+  width: 260px;
 
   &-logo {
     display: block;
     width: 64px;
     height: 64px;
     margin: 40px auto 30px;
+    background-color: var(--first-color);
+    border-radius: 32px;
   }
 }
