--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -90,7 +90,18 @@ h1 {
 .ant-menu-light .ant-menu-submenu-title:hover {
   color: var(--first-color);
 }
+.ant-menu-submenu-selected,
+.ant-menu-submenu:hover > .ant-menu-submenu-title > .ant-menu-submenu-expand-icon,
+.ant-menu-submenu:hover > .ant-menu-submenu-title > .ant-menu-submenu-arrow {
+  color: var(--first-color);
+}
+.ant-menu-item:focus-visible,
+.ant-menu-submenu-title:focus-visible {
+  box-shadow: 0 0 0 2px var(--first-color-shadow) !important;
+}
 
+.ant-menu-item:active,
+.ant-menu-submenu-title:active,
 .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
   background-color: var(--first-color-shadow);
 }
