静态协调者界面

--- a/src/features/admin/style.less
+++ b/src/features/admin/style.less
@@ -9,3 +9,5 @@
 @import './ExamenDetailForm';
 @import './DptMngPage';
 @import './DptDetailForm';
+@import './CoorMngPage';
+@import './CoorDetailForm';
