--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -131,6 +131,11 @@ h1 {
   color: var(--first-color);
 }
 
+a.ant-typography,
+.ant-typography a {
+  color: var(--second-color);
+}
+
 /* ================SPIN============== */
 
 .ant-spin-text {
@@ -158,4 +163,9 @@ h1 {
   .ant-popover-inner-content {
     width: 260px;
   }
+}
+
+.ant-form-item-explain,
+.ant-form-item-extra {
+  font-size: 13px;
 }
