--- a/src/features/admin/ExamenMngPage.less
+++ b/src/features/admin/ExamenMngPage.less
@@ -18,7 +18,7 @@
   &-table-header {
     background-color: var(--white-color);
     height: 48px;
-    margin-bottom: var(--mb-0-75);
+    margin-bottom: 15px;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
