--- a/src/features/admin/InfirMngPage.less
+++ b/src/features/admin/InfirMngPage.less
@@ -1,6 +1,6 @@
 @import '../../styles/mixins';
 
-.admin-coor-mng-page {
+.admin-infir-mng-page {
   &-header {
     margin-bottom: 1.5rem;
     font-weight: var(--font-medium);
@@ -47,11 +47,11 @@
 
     &-tbody {
       font-size: 13px;
-	}
-	
-	.table-column-extra{
-		font-size: 12px;
-	}
+    }
+
+    .table-column-extra {
+      font-size: 12px;
+    }
   }
 
   &-footer {
