--- a/src/features/admin/ModalContainer.less
+++ b/src/features/admin/ModalContainer.less
@@ -6,3 +6,10 @@
 .modal-btn {
   width: 49%;
 }
+
+.modal-tip-obligatoire {
+  font-size: 12px;
+  color: var(--second-color);
+  margin-bottom: var(--mb-0-75);
+  text-align: right;
+}
