--- a/src/features/admin/style.less
+++ b/src/features/admin/style.less
@@ -11,3 +11,7 @@
 @import './DptDetailForm';
 @import './CoorMngPage';
 @import './CoorDetailForm';
+@import './PatientDetailForm';
+@import './PatientMngPage';
+@import './InfirMngPage';
+@import './InfirDetailForm';
