--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -167,5 +167,63 @@ a.ant-typography,
 
 .ant-form-item-explain,
 .ant-form-item-extra {
-  font-size: 13px;
+  font-size: 12px;
+}
+
+.ant-form-item-label
+  > label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before {
+  color: var(--second-color);
+}
+
+.ant-radio-checked::after {
+  border: 1px solid var(--first-color);
+}
+.ant-radio-wrapper:hover .ant-radio,
+.ant-radio:hover .ant-radio-inner,
+.ant-radio-input:focus + .ant-radio-inner,
+.ant-radio-checked .ant-radio-inner {
+  border-color: var(--first-color);
+}
+
+.ant-radio-inner::after {
+  background-color: var(--first-color);
+}
+
+.ant-form-item-has-error :not(.ant-input-disabled):not(.ant-input-borderless).ant-input:focus,
+.ant-form-item-has-error
+  :not(.ant-input-affix-wrapper-disabled):not(.ant-input-affix-wrapper-borderless).ant-input-affix-wrapper:focus,
+.ant-form-item-has-error :not(.ant-input-disabled):not(.ant-input-borderless).ant-input-focused,
+.ant-form-item-has-error
+  :not(.ant-input-affix-wrapper-disabled):not(.ant-input-affix-wrapper-borderless).ant-input-affix-wrapper-focused {
+  border-color: #ff7875 !important;
+}
+
+.ant-pagination-item-active {
+  background: var(--light-color);
+  border-color: var(--first-color-alt);
+}
+.ant-pagination-item-active a {
+  color: var(--first-color-alt);
+}
+.ant-pagination-item-active:focus-visible,
+.ant-pagination-item-active:hover {
+  border-color: var(--first-color-alt);
+  color: var(--first-color-alt);
+}
+
+/* ================TABLE============== */
+
+.ant-table-thead {
+  border-radius: 10px 10px 0 0;
+}
+.ant-table-thead > tr > th {
+  background: var(--first-color);
+  color: rgba(255, 255, 255, 0.9);
+  font-weight: var(--font-semi-bold);
+  border-bottom: 1px solid var(--first-color-alt);
+  text-transform: capitalize;
+}
+
+.ant-table-thead > tr > th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before{
+  background-color: rgba(255, 255, 255, 0.3);
 }
