--- a/src/features/admin/UserMngPage.less
+++ b/src/features/admin/UserMngPage.less
@@ -17,7 +17,7 @@
   &-table-header {
     background-color: var(--white-color);
     height: 48px;
-    margin-bottom: var(--mb-0-75);
+    margin-bottom: 15px;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
@@ -35,7 +35,7 @@
 
       .search-bar {
         margin-left: var(--mb-0-25);
-        width: 300px;
+        width: 340px;
 
         .ant-input {
           border-radius: 10px 0 0 10px;
@@ -56,7 +56,15 @@
     &-tbody {
       font-size: 13px;
     }
+
+    .usertype-tag {
+      width: 110px;
+      text-align: center;
+      border-radius: 15px
+    }
   }
+
+
 
   &-footer {
     position: fixed;
