--- a/src/features/admin/style.less
+++ b/src/features/admin/style.less
@@ -15,3 +15,5 @@
 @import './PatientMngPage';
 @import './InfirMngPage';
 @import './InfirDetailForm';
+@import './VsMngPage';
+@import './VsDetailForm';
