--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -3,3 +3,4 @@
 @import '../features/home/style';
 @import '../features/common/style';
 @import '../features/admin/style';
+@import '../features/coordinateur/style';
