--- a/src/features/admin/style.less
+++ b/src/features/admin/style.less
@@ -2,18 +2,14 @@
 @import './Layout';
 @import './SidePanel';
 @import './UserMngPage';
-@import './ModalContainer';
 @import './UserDetailForm';
-@import './ModalWrapper';
 @import './ExamenMngPage';
 @import './ExamenDetailForm';
 @import './DptMngPage';
 @import './DptDetailForm';
 @import './CoorMngPage';
 @import './CoorDetailForm';
-@import './PatientDetailForm';
-@import './PatientMngPage';
 @import './InfirMngPage';
 @import './InfirDetailForm';
-@import './VsMngPage';
-@import './VsDetailForm';
+@import './PatientMngWrapper';
+@import './VsMngWrapper';
