--- a/src/features/home/style.less
+++ b/src/features/home/style.less
@@ -3,3 +3,7 @@
 @import './WelcomePage';
 @import './Login';
 @import './UserSimpleProfile';
+@import './PatientMngPage';
+@import './PatientDetailForm';
+@import './VsDetailForm';
+@import './VsMngPage';
