--- a/src/features/coordinateur/style.less
+++ b/src/features/coordinateur/style.less
@@ -1,3 +1,6 @@
 @import '../../styles/mixins';
 @import './Layout';
 @import './SidePanel';
+@import './PatientMngWrapper';
+@import './NouvelleOrdonnance';
+@import './NouvelleVisite';
