--- a/src/features/coordinateur/NouvelleOrdonnance.less
+++ b/src/features/coordinateur/NouvelleOrdonnance.less
@@ -1,5 +1,8 @@
 @import '../../styles/mixins';
 
 .coordinateur-nouvelle-ordonnance {
-
+  &-header {
+    margin-bottom: 1.5rem;
+    font-weight: var(--font-medium);
+  }
 }
