--- a/src/features/coordinateur/style.less
+++ b/src/features/coordinateur/style.less
@@ -4,3 +4,7 @@
 @import './PatientMngWrapper';
 @import './NouvelleOrdonnance';
 @import './NouvelleVisite';
+@import './VsMngWrapper';
+@import './OrdMngWrapper';
+@import './SingleVsDtlWrapper';
+@import './OrdWithVsDtlWrapper';
