--- a/src/features/home/VsDetailForm.less
+++ b/src/features/home/VsDetailForm.less
@@ -1,5 +1,9 @@
 @import '../../styles/mixins';
 
 .home-vs-detail-form {
-
+	background-color: var(--light-color);
+	margin-bottom: var(--mb-0-25);
+	.ant-form-item{
+		margin-bottom: 0;
+	}
 }
