--- a/src/features/home/style.less
+++ b/src/features/home/style.less
@@ -7,3 +7,9 @@
 @import './PatientDetailForm';
 @import './VsDetailForm';
 @import './VsMngPage';
+@import './VsDetailTable';
+@import './VsDetailForms';
+@import './OrdDetailTable';
+@import './OrdMngPage';
+@import './OrdWithVsDtlPage';
+@import './SingleVsDtlPage';
