--- a/src/features/coordinateur/NouvelleVisite.less
+++ b/src/features/coordinateur/NouvelleVisite.less
@@ -1,5 +1,72 @@
 @import '../../styles/mixins';
 
 .coordinateur-nouvelle-visite {
+  &-header {
+    margin-bottom: 1.5rem;
+    font-weight: var(--font-medium);
+  }
 
+  .classic-part {
+    background: rgba(255, 255, 255, 0.85);
+    box-shadow: var(--box-shadow);
+    padding: 20px 20px;
+    border-radius: 10px;
+    margin-bottom: var(--mb-1);
+    width: fit-content;
+  }
+
+  .infirmiere-part {
+    font-size: 14px;
+
+    .ant-tag {
+      margin-left: 14px;
+      box-shadow: var(--box-shadow);
+      border-radius: 6px;
+    }
+
+    .ant-tag:hover {
+      color: var(--first-color);
+    }
+    .ant-tag-checkable:active {
+      background-color: var(--second-color);
+      color: var(--white-color);
+    }
+    .ant-tag-checkable-checked:hover {
+      color: var(--white-color);
+    }
+
+    .ant-tag-checkable-checked {
+      background-color: var(--first-color);
+      color: var(--white-color);
+      border-color: var(--first-color);
+    }
+  }
+
+  .datepicker-part {
+  }
+
+  .success-part {
+    margin: 0 auto;
+    font-size: 14px;
+    font-weight: 500;
+    color: white;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &-confirm-btn {
+    display: block;
+    width: 100%;
+    height: 60px;
+    font-size: 14px;
+    text-transform: uppercase;
+    box-shadow: var(--box-shadow);
+    margin-top: 30px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
