--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -23,6 +23,12 @@ h1 {
   color: var(--first-color-alt);
 }
 
+h2 {
+  font-weight: 600;
+  text-transform: capitalize;
+  color: var(--first-color-alt);
+}
+
 /* ================BUTTONS============== */
 
 .ant-btn {
@@ -211,6 +217,11 @@ a.ant-typography,
   color: var(--first-color-alt);
 }
 
+.ant-pagination-options .ant-select:not(.ant-select-customize-input) .ant-select-selector {
+  background: var(--light-color);
+  border-color: var(--first-color-alt);
+}
+
 /* ================TABLE============== */
 
 .ant-table-thead {
@@ -224,6 +235,45 @@ a.ant-typography,
   text-transform: capitalize;
 }
 
-.ant-table-thead > tr > th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before{
+.ant-table-thead
+  > tr
+  > th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before {
   background-color: rgba(255, 255, 255, 0.3);
+}
+
+.ant-table-tbody > tr.ant-table-row-selected:hover > td {
+  background: #e6ddc6;
+}
+.ant-table-tbody > tr.ant-table-row-selected > td {
+  background: rgb(228, 222, 209);
+}
+
+.ant-table.ant-table-small .ant-table-title,
+.ant-table.ant-table-small .ant-table-footer,
+.ant-table.ant-table-small .ant-table-thead > tr > th,
+.ant-table.ant-table-small .ant-table-tbody > tr > td,
+.ant-table.ant-table-small tfoot > tr > th,
+.ant-table.ant-table-small tfoot > tr > td {
+  color: var(--first-color);
+}
+.ant-btn-link,
+.ant-table-filter-trigger.active {
+  color: var(--first-color);
+}
+
+.ant-table-filter-trigger.active .anticon-search {
+  color: var(--second-color) !important;
+}
+
+.ant-notification-notice-message {
+  font-size: 15px;
+}
+
+.ant-notification-notice-description .ant-typography-text {
+  font-size: 12px;
+  color: var(--second-color);
+}
+
+.ant-notification-notice-description .ant-typography-text:hover {
+  color: var(--first-color);
 }
