--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -4,3 +4,4 @@
 @import '../features/common/style';
 @import '../features/admin/style';
 @import '../features/coordinateur/style';
+@import '../features/infirmiere/style';
