--- a/src/features/admin/UserMngPage.less
+++ b/src/features/admin/UserMngPage.less
@@ -60,11 +60,29 @@
     .usertype-tag {
       width: 110px;
       text-align: center;
-      border-radius: 15px
+      height: 24px;
+      line-height: 24px;
+      font-size: 12px;
+      border-radius: 12px;
+
+      &-0 {
+        color: #363A36;
+        background-color: #DED8D4;
+      }
+
+      &-1 {
+        color: #ECB00D;
+        background-color: #F8EDDF;
+
+      }
+
+      &-2 {
+        color: #2A6043;
+        background-color: #D9F0E6;
+
+      }
     }
   }
-
-
 
   &-footer {
     position: fixed;
