--- a/src/features/home/OrdDetailTable.less
+++ b/src/features/home/OrdDetailTable.less
@@ -1,10 +1,17 @@
 @import '../../styles/mixins';
 
 .home-ord-detail-table {
-	margin-bottom: var(--mb-0-25);
+  margin-bottom: var(--mb-0-25);
 
-	.table-cell-extra{
-		font-size: 12px;
-		color: var(--gray-color);
-	}
+  .table-cell-extra {
+    font-size: 12px;
+    color: var(--gray-color);
+  }
+
+  &-footer {
+    bottom: 30px;
+    font-size: 12px;
+    color: var(--first-color);
+    font-weight: 200;
+  }
 }
