--- a/src/features/home/OrdMngPage.less
+++ b/src/features/home/OrdMngPage.less
@@ -1,5 +1,8 @@
 @import '../../styles/mixins';
 
 .home-ord-mng-page {
-
+  &-header {
+    margin-bottom: 1.5rem;
+    font-weight: var(--font-medium);
+  }
 }
