--- a/src/features/home/OrdWithVsDtlPage.less
+++ b/src/features/home/OrdWithVsDtlPage.less
@@ -1,5 +1,17 @@
 @import '../../styles/mixins';
 
 .home-ord-with-vs-dtl-page {
+  &-header {
+    margin-bottom: 1.5rem;
+  }
 
+  &-content{
+    &-basic-info h3{
+      // font-weight: 700;
+    }
+
+    &-subtitle{
+      margin-top: 30px;
+    }
+  }
 }
