--- a/src/features/home/VsDetailForm.less
+++ b/src/features/home/VsDetailForm.less
@@ -1,9 +1,12 @@
 @import '../../styles/mixins';
 
 .home-vs-detail-form {
-	background-color: var(--light-color);
-	margin-bottom: var(--mb-0-25);
-	.ant-form-item{
-		margin-bottom: 0;
-	}
+  margin-top: var(--mb-1);
+  margin-bottom: var(--mb-1);
+  .ant-form-item {
+    margin-bottom: 0;
+  }
+  .ant-form-item-label {
+    font-weight: bold;
+  }
 }
