--- a/src/features/home/VsDetailForms.less
+++ b/src/features/home/VsDetailForms.less
@@ -1,5 +1,16 @@
 @import '../../styles/mixins';
 
 .home-vs-detail-forms {
+	margin-left: 60px;
 
+  .home-vs-detail-form {
+    margin-top: var(--mb-0-5);
+    margin-bottom: var(--mb-0-5);
+  }
+
+  .nested-form-title {
+	text-transform: capitalize;
+    font-weight: bold;
+    text-decoration: underline;
+  }
 }
