--- a/src/features/home/style.less
+++ b/src/features/home/style.less
@@ -13,3 +13,5 @@
 @import './OrdMngPage';
 @import './OrdWithVsDtlPage';
 @import './SingleVsDtlPage';
+@import './OrdVsBreadcrumb';
+@import './OrdDetailForm';
