--- a/src/features/infirmiere/style.less
+++ b/src/features/infirmiere/style.less
@@ -1,1 +1,6 @@
 @import '../../styles/mixins';
+@import './SingleVsDtlWrapper';
+@import './OrdWithVsDtlWrapper';
+@import './Layout';
+@import './SidePanel';
+@import './VsSummaryPage';
