--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -20,6 +20,7 @@ body {
 
 h1 {
   font-weight: 800;
+  text-transform: capitalize;
   color: var(--first-color-alt);
 }
 
@@ -27,6 +28,10 @@ h2 {
   font-weight: 600;
   text-transform: capitalize;
   color: var(--first-color-alt);
+}
+
+h3 {
+  color: rgba(0, 0, 0, 0.95);
 }
 
 /* ================BUTTONS============== */
@@ -129,7 +134,7 @@ h2 {
 }
 
 .error {
-  color: #f81d22;
+  color: rgb(214, 74, 74);
 }
 
 // ICON
