login bind api and router restriction

--- a/src/features/home/Login.less
+++ b/src/features/home/Login.less
@@ -1,42 +1,165 @@
 @import '../../styles/mixins';
 
-.home-login {
-  display: flex;
-  height: 100vh;
+// .home-login {
+//   height: 100vh;
+//   max-width: 1280px;
+//   padding: var(--mb-0-75) 0;
+//   margin: 0 auto;
 
-  &-banner {
-    width: 50%;
-    background-color: var(--first-color);
+//   &-header {
+//     margin-bottom: var(--mb-2);
+//   }
+
+//   &-body {
+//     width: 700px;
+//     margin: 0 auto;
+
+//     &-form {
+//       margin-top: 100px;
+//       padding: 20px 40px;
+//       background-color: var(--white-color);
+//       border-radius: 10px;
+//       border: 1px solid var(--white-color);
+//       box-shadow: var(--box-shadow);
+
+//       &-title {
+//         font-size: var(--h1-font-size);
+//         font-weight: var(--font-semi-bold);
+//         margin-bottom: var(--mb-2-5);
+//       }
+
+//       &-subtitle {
+//         font-size: var(--h3-font-size);
+//         font-weight: var(--font-thin);
+//         margin-bottom: var(--mb-1-25);
+//       }
+
+//       .ant-form-item-label {
+//         margin-bottom: var(--mb-0-75);
+//       }
+
+//       .ant-btn-primary {
+//         width: 100%;
+//         height: 40px;
+//       }
+//     }
+//   }
+// }
+
+.home-login {
+  position: relative;
+  width: 100%;
+  background-color: #fff;
+  min-height: 100vh;
+  overflow: hidden;
+
+  &:before {
+    content: '';
+    position: absolute;
+    height: 2000px;
+    width: 2000px;
+    top: -10%;
+    right: 48%;
+    transform: translateY(-50%);
+    background-image: linear-gradient(-45deg, var(--second-color) 0%, var(--light-color) 100%);
+    transition: 1.8s ease-in-out;
+    border-radius: 50%;
+    z-index: 6;
   }
 
-  &-body {
-    margin: 0 auto;
+  &-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 
-    &-header {
-      margin-top: var(--mb-0-75);
-      margin-bottom: var(--mb-2);
+  .left-panel {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    align-items: flex-start;
+    z-index: 6;
+    padding: 3rem 17% 2rem 12%;
+    pointer-events: all;
+
+    .content {
+      color: var(--first-color);
+      font-weight: 600;
+      line-height: 1;
+      font-size: 1.7rem;
+      text-transform: capitalize;
+    }
+  }
+
+  .image {
+    width: 100%;
+    transition: transform 1.1s ease-in-out;
+    transition-delay: 0.4s;
+  }
+
+  .right-panel {
+    padding: 1.5rem 17% 2rem 14%;
+
+    .logo {
+      img {
+        width: 32px;
+        height: 32px;
+      }
+
+      span{
+        margin-left: 5px;
+        color: var(--first-color);
+      }
     }
 
-    &-form {
+    .login-form {
+      margin-top: 25%;
+
       &-title {
-        font-size: var(--h1-font-size);
-        font-weight: var(--font-semi-bold);
-        margin-bottom: var(--mb-0-5);
+        font-size: 2.2rem;
+        color: var(--first-color-alt);
+        margin-bottom: 20px;
+        text-align: center;
+        text-transform: capitalize;
       }
 
       &-subtitle {
         font-size: var(--h3-font-size);
         font-weight: var(--font-thin);
+        margin-bottom: var(--mb-1);
+      }
+
+      &-radio-btns {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        text-align: center;
+        column-gap: 10px;
         margin-bottom: var(--mb-1-25);
+
+        button {
+          height: 36px;
+        }
+      }
+
+      &-radio-btn-checked {
+        background-color: var(--first-color);
+        color: var(--light-color);
+        font-weight: 800;
       }
 
       .ant-form-item-label {
-        margin-bottom: var(--mb-0-75);
+        margin-bottom: var(--mb-0-5);
       }
 
       .ant-btn-primary {
         width: 100%;
-        height: 40px;
+        height: 44px;
+        font-size: 15px;
       }
     }
   }
