--- a/src/features/infirmiere/SidePanel.less
+++ b/src/features/infirmiere/SidePanel.less
@@ -11,7 +11,12 @@
     width: 64px;
     height: 64px;
     margin: 40px auto 30px;
-    background-color: var(--first-color);
-    border-radius: 32px;
+    // background-color: var(--first-color);
+    // border-radius: 32px;
+
+    img{
+      height: 64px;
+      width: 64px;
+    }
   }
 }
