--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -54,6 +54,7 @@ h3 {
 
 .ant-btn:hover,
 .ant-btn:focus {
+  cursor: pointer;
   border-color: var(--first-color);
   color: var(--first-color);
 }
@@ -282,3 +283,36 @@ a.ant-typography,
 .ant-notification-notice-description .ant-typography-text:hover {
   color: var(--first-color);
 }
+
+// /* ================ RADIO BUTTON ============== */
+
+// .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
+//   color: var(--light-color);
+//   background: var(--first-color);
+//   border-color: var(--first-color);
+// }
+// .ant-radio-button-wrapper-checked:not([class*=' ant-radio-button-wrapper-disabled']).ant-radio-button-wrapper:first-child {
+//   border-right-color: var(--first-color);
+// }
+// .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
+//   color: var(--light-color);
+//   border-color: var(--first-color-alt);
+// }
+
+// .ant-radio-button-wrapper:hover {
+//   color: var(--first-color);
+//   border-color: var(--first-color);
+// }
+
+// .ant-radio-button-wrapper-checked:hover {
+//   background: var(--first-color-alt);
+// }
+
+// .ant-radio-button-wrapper:first-child:hover{
+//   border-right: 1px solid var(--first-color);
+//   border-radius: 2px 0 0 2px;
+// }
+
+// .ant-radio-button-wrapper:not(:first-child)::before{
+//   background-color: var(--first-color);
+// }
