--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -21,7 +21,8 @@
   --first-color-alt: #003638;
   --first-color-shadow: rgba(5, 80, 82, 0.2);
   --light-color: #f3f2c9;
-  --gray-color: #7f7d87;
+  --gray-color: #b8c4c7;
+
 
   // --first-color: hsl(var(--hue-color), 64%, 22%);
   // --first-color-alt: hsl(var(--hue-color), 64%, 15%);
