--- a/src/features/home/UserSimpleProfile.less
+++ b/src/features/home/UserSimpleProfile.less
@@ -1,11 +1,15 @@
 @import '../../styles/mixins';
 
 .home-user-simple-profile {
-  margin-bottom: var(--mb-2-5);
-  margin-left: 80px;
+  width: fit-content;
+  margin: 0 auto var(--mb-2-5);
 
   &-type {
     font-size: 12px;
     color: var(--gray-color);
+  }
+
+  &-name {
+    text-transform: capitalize;
   }
 }
