--- a/src/features/common/Unauthorized.less
+++ b/src/features/common/Unauthorized.less
@@ -1,8 +1,23 @@
 @import '../../styles/mixins';
 
 .common-unauthorized {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  text-align: center;
+  img {
+    width: 520px;
+  }
+
+  div {
+    font-size: 24px;
+    margin: 20px 0;
+    font-weight: 600;
+  }
+
+  button {
+    height: 40px;
+    width: 280px;
+  }
 }
