--- a/src/features/common/PageNotFound.less
+++ b/src/features/common/PageNotFound.less
@@ -1,5 +1,23 @@
 @import '../../styles/mixins';
 
 .common-page-not-found {
-  color: red;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  text-align: center;
+  img {
+    width: 520px;
+  }
+
+  div {
+    font-size: 24px;
+    margin: 20px 0;
+    font-weight: 600;
+  }
+
+  button {
+    height: 40px;
+    width: 280px;
+  }
 }
