--- a/src/features/coordinateur/SidePanel.less
+++ b/src/features/coordinateur/SidePanel.less
@@ -15,4 +15,17 @@
     background-color: var(--first-color);
     border-radius: 32px;
   }
+
+  .logout {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: var(--first-color);
+    text-transform: capitalize;
+  }
+
+  .logout:hover{
+    text-decoration: underline;
+  }
 }
