--- a/src/features/home/style.less
+++ b/src/features/home/style.less
@@ -15,3 +15,7 @@
 @import './SingleVsDtlPage';
 @import './OrdVsBreadcrumb';
 @import './OrdDetailForm';
+@import './VsPatientPeForm';
+@import './VsPatientEmForm';
+@import './VsPatientConForm';
+@import './VsPatientEmForms';
