--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -316,3 +316,13 @@ a.ant-typography,
 // .ant-radio-button-wrapper:not(:first-child)::before{
 //   background-color: var(--first-color);
 // }
+
+a {
+  color: var(--second-color);
+}
+
+a:hover {
+  color: #63adaf;
+  text-decoration: underline;
+}
+
