--- a/src/features/coordinateur/SidePanel.less
+++ b/src/features/coordinateur/SidePanel.less
@@ -6,7 +6,8 @@
   overflow: scroll;
   width: 260px;
   background-color: white;
-
+  position: relative;
+  
   &-logo {
     display: block;
     width: 64px;
@@ -25,7 +26,7 @@
     text-transform: capitalize;
   }
 
-  .logout:hover{
+  .logout:hover {
     text-decoration: underline;
   }
 }
