--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -326,3 +326,13 @@ a:hover {
   text-decoration: underline;
 }
 
+.ant-checkbox-checked .ant-checkbox-inner {
+  background-color: var(--first-color);
+  border-color: var(--first-color);
+}
+
+.ant-checkbox-wrapper:hover .ant-checkbox-inner,
+.ant-checkbox:hover .ant-checkbox-inner,
+.ant-checkbox-input:focus + .ant-checkbox-inner {
+  border-color: var(--first-color);
+}
