--- a/src/features/admin/DptMngPage.less
+++ b/src/features/admin/DptMngPage.less
@@ -54,11 +54,13 @@
     width: 260px;
     border-radius: 20px;
     margin-bottom: var(--mb-1);
+    height: fit-content;
 
     .ant-card-meta-title {
       font-weight: var(--font-semi-bold);
       color: var(--second-color);
     }
+
     .ant-card-meta-description {
       font-size: 12px;
       height: 107px;
