--- a/src/features/coordinateur/NouvelleVisite.less
+++ b/src/features/coordinateur/NouvelleVisite.less
@@ -58,12 +58,11 @@
 
   &-confirm-btn {
     display: block;
-    // width: 100%;
-    // height: 60px;
-    // font-size: 14px;
-    // text-transform: uppercase;
+    width: 100%;
+    height: 60px;
+    font-size: 14px;
+    text-transform: uppercase;
     box-shadow: var(--box-shadow);
-    // margin-top: 30px;
     margin: 40px auto;
 
     &:hover {
