--- a/src/features/home/SingleVsDtlPage.less
+++ b/src/features/home/SingleVsDtlPage.less
@@ -25,8 +25,10 @@
     }
 
     &-btn {
-      display: block;
-      margin: 40px auto;
+      margin: 40px auto 20px;
+      width: 100%;
+      height: 52px;
+      text-transform: uppercase;
     }
   }
 
@@ -50,13 +52,13 @@
       }
     }
 
-    .btns-container{
+    .btns-container {
       display: grid;
       grid-template-columns: repeat(10, 1fr);
       gap: 10px;
       margin-bottom: var(--mb-1);
 
-      .ant-btn{
+      .ant-btn {
         border-radius: 4px;
         box-shadow: var(--box-shadow);
         background-color: #fafafa;
