--- a/src/features/home/VsDetailTable.less
+++ b/src/features/home/VsDetailTable.less
@@ -2,4 +2,27 @@
 
 .home-vs-detail-table {
   margin-bottom: var(--mb-2);
+
+  .ant-table {
+    border-radius: 16px;
+    box-shadow: var(--box-shadow);
+  }
+
+  .ant-table-container table > thead > tr:first-child th:last-child {
+    border-top-right-radius: 16px;
+  }
+
+  .ant-table-container table > thead > tr:first-child th:first-child {
+    border-top-left-radius: 16px;
+  }
+
+  .ant-table-container table > thead > tr:first-child th:first-child,
+  .ant-table-container table > tbody > tr td:first-child  {
+    padding-left: 18px;
+  }
+
+  a.ant-typography, .ant-typography a{
+    padding: 2px 10px;
+    transition: .3s;
+  }
 }
