--- a/src/features/home/SingleVsDtlPage.less
+++ b/src/features/home/SingleVsDtlPage.less
@@ -37,6 +37,8 @@
     padding: 20px 50px;
     background-color: rgba(255, 255, 255, 0.3);
     box-shadow: var(--box-shadow);
+    border-radius: 12px;
+
     .ant-form-item-label {
       font-weight: bold;
     }
