--- a/src/features/home/OrdDetailTable.less
+++ b/src/features/home/OrdDetailTable.less
@@ -8,6 +8,19 @@
     color: var(--gray-color);
   }
 
+  .ant-table {
+    border-radius: 16px;
+    box-shadow: var(--box-shadow);
+  }
+
+  .ant-table-container table > thead > tr:first-child th:last-child {
+    border-top-right-radius: 16px;
+  }
+
+  .ant-table-container table > thead > tr:first-child th:first-child {
+    border-top-left-radius: 16px;
+  }
+
   &-footer {
     bottom: 30px;
     font-size: 12px;
